# smart-bin-system

./: .gitignore  README.md  curbie_launch_ui.sh
Curbie_Smart_Bin/: README.md  build_run_dice.sh  test flow instructions.md
Curbie_Smart_Bin/dice_ws/src/curbie_smart_bin_operator/: package.xml  setup.cfg  setup.py
Curbie_Smart_Bin/dice_ws/src/curbie_smart_bin_vision/: package.xml  setup.cfg  setup.py
Curbie_Smart_Bin/firmware/: pico_main.py
Curbie_Smart_Bin/robot_ws_template/: build_run_robot.sh
Curbie_Smart_Bin/robot_ws_template/src/curbie_smart_bin_robot/: package.xml  setup.cfg  setup.py
Curbie_Smart_Bin/robot_ws_template/src/curbie_smart_bin_robot/curbie_smart_bin_robot/: __init__.py  sonar_publisher.py
Curbie_Smart_Bin/robot_ws_template/src/curbie_smart_bin_robot/launch/: curbie_smart_bin_robot.launch.py
Curbie_Smart_Bin/robot_ws_template/src/curbie_smart_bin_robot/resource/: curbie_smart_bin_robot
demo1/: README.md  start_combined_teleop_ui_dice.sh
demo1/turtlebot3_combined_teleop/: package.xml  setup.cfg  setup.py
demo1/turtlebot3_combined_teleop/launch/: combined_teleop.launch.py  combined_teleop_ui.launch.py
demo1/turtlebot3_combined_teleop/test/: test_recording_playback_core.py
demo1/turtlebot3_combined_teleop/turtlebot3_combined_teleop/: combined_teleop_node.py  combined_teleop_ui_node.py
demo2/: README.md  run_demo2_full.sh  run_marker_seek.sh
demo2/arUco_modular_test/ArUco_package/: package.xml  setup.cfg  setup.py
demo2/arUco_modular_test/ArUco_package/ArUco_package/: ArUco_Node.py  ArUco_search.py
demo2/turtlebot3_marker_seek_demo2/: package.xml  setup.cfg  setup.py
demo2/turtlebot3_marker_seek_demo2/launch/: marker_seek.launch.py
demo2/turtlebot3_marker_seek_demo2/test/: test_align_to_marker_core.py  test_camera_routing.py  test_flake8.py  test_marker_seek_logic.py
demo2/turtlebot3_marker_seek_demo2/turtlebot3_marker_seek_demo2/: align_to_marker_core.py  marker_seek.launch.py  marker_seek_core.py  marker_seek_node.py
documentation/SDP_plan/: sdp_template_plan.tex
hardware/pico/: main.py
layer1_navigation/tb3_keyboard_control/: package.xml  setup.cfg  setup.py
layer1_navigation/tb3_keyboard_control/tb3_keyboard_control/: keyboard_teleop.py
layer3_docking/hook_controller_pkg/: package.xml  setup.cfg  setup.py
layer3_docking/hook_controller_pkg/hook_controller_pkg/: hook_controller.py
layer3_docking/ultrasonic_aligner_pkg/: package.xml  setup.cfg  setup.py
layer3_docking/ultrasonic_aligner_pkg/ultrasonic_aligner_pkg/: aligner_node.py  ultrasonic_simulator.py
layer4_mission/mission_controller/: package.xml  setup.cfg  setup.py
layer4_mission/mission_controller/config/: collection_layout.json
layer4_mission/mission_controller/mission_controller/: mission_controller.py  mission_core.py
layer4_mission/mission_controller/test/: test_mission_core.py
layer4_mission/path_manager/: package.xml  setup.cfg  setup.py
layer4_mission/path_manager/path_manager/: __init__.py  path_core.py  path_io.py  path_manager_node.py
layer4_mission/path_manager/resource/: path_manager
layer4_mission/path_manager/test/: test_path_core.py
layer5_interface/backend/: API_ENDPOINTS_REFERENCE.md  database.py  main.py  models.py  requirements.txt  scheduler.py  schemas.py
shared_msgs/bin_collection_msgs/: CMakeLists.txt  package.xml
shared_msgs/bin_collection_msgs/action/: DockToBin.action  ExecutePath.action
shared_msgs/bin_collection_msgs/msg/: AlignmentStatus.msg  BinInfo.msg  MissionStatus.msg  PathPoint.msg  PathStatus.msg  UltrasonicArray.msg
shared_msgs/bin_collection_msgs/srv/: AbortMission.srv  GetPath.srv  RegisterBin.srv  StartMission.srv
(+41 files in other folders)
